--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
+
+.plant-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.plant-item {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 /* do not edit this footer */
